added test scripts for composer

--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
     },
     "scripts": {
         "test": [
-            "@codecept"
+            "@run-unittest"
         ],
-        "codecept": "php vendor/bin/codecept"
+        "run-unittest": "codecept run unit"
     }
 }
