--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         }
     },
     "require-dev": {
-        "codeception/codeception": "^2.2"
+        "codeception/codeception": "^2.2",
+        "symfony/debug": "^3.2",
+        "symfony/var-dumper": "^3.2"
     },
     "scripts": {
         "test": [
