--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
     },
     "require-dev": {
         "codeception/codeception": "^2.2",
-        "symfony/debug": "^3.2",
-        "symfony/var-dumper": "^3.2"
+        "symfony/debug": "*",
+        "symfony/var-dumper": "*"
     },
     "scripts": {
         "test": [
